# signalflow-client-python

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/: CODEOWNERS
examples/: basic.py  dataframe.py
src/signalfx/: __about__.py  __init__.py  constants.py  version.py
src/signalfx/signalflow/: __init__.py  channel.py  computation.py  errors.py  messages.py  sse.py  transport.py  ws.py
tests/: test_messages.py
