[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalflow-client-python"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Splunk", email = "support@splunk.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/signalfx/signalflow-client-python#readme"
Issues = "https://github.com/signalfx/signalflow-client-python/issues"
Source = "https://github.com/signalfx/signalflow-client-python"

[tool.hatch.build.targets.wheel]
packages = ["src/signalfx"]

[tool.hatch.version]
path = "src/signalfx/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/signalfx tests}"

[tool.coverage.run]
source_pkgs = ["signalfx", "tests"]
branch = true
parallel = true
omit = [
  "src/signalfx/__about__.py",
]

[tool.coverage.paths]
signalfx = ["src/signalfx", "*/signalflow-client-python/src/signalfx"]
tests = ["tests", "*/signalflow-client-python/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
